--- a/app/modules/investwithdraw/views/withdrawStart.html
+++ b/app/modules/investwithdraw/views/withdrawStart.html
@@ -119,7 +119,7 @@
 									<p>Large Cap</p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>83,200</span></p>
+									<p><span class="currency">&#8377;</span><span>83,200</span></p>
 								</div>
 								<div class="td">
 									<p>-</p>
@@ -133,7 +133,7 @@
 									<p>Large Cap</p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>83,200</span></p>
+									<p><span class="currency">&#8377;</span><span>83,200</span></p>
 								</div>
 								<div class="td">
 									<p>-</p>
@@ -147,7 +147,7 @@
 									<p>Large Cap</p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>83,200</span></p>
+									<p><span class="currency">&#8377;</span><span>83,200</span></p>
 								</div>
 								<div class="td">
 									<p>-</p>
@@ -161,7 +161,7 @@
 									<p>Large Cap</p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>83,200</span></p>
+									<p><span class="currency">&#8377;</span><span>83,200</span></p>
 								</div>
 								<div class="td">
 									<p>-</p>
