--- a/less/invest.less
+++ b/less/invest.less
@@ -16,12 +16,14 @@ section{
 							position:relative;
 							font-size:50px;
 							span{
-								display: block;
-							word-wrap: break-word;
-							white-space: pre-line;
-							width: 96px;
-							font-size: 38px;
+								word-wrap: break-word;
+								white-space: pre-line;
+								width: 96px;
+								font-size: 33px;
 							}
+						}
+						&.currency{
+							font-size: 26px;
 						}
 						&.nextline{
 							position:absolute;
