--- a/less/planinvset.less
+++ b/less/planinvset.less
@@ -176,6 +176,7 @@ section{
 				.GLOBAL_FONT_STYLE('Roboto-Bold',@flamingoapprox,normal);
 				.PIXEL2EM(16);
 				margin-top: 2%;
+				cursor: pointer;
 			}
 		}	
 	}
