--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -370,8 +370,8 @@
                 <p class="more-questions">Would you like to answer some more questions to fine tune your score?</p>
                 <div class="fin-btn-group answer-more">
                     <button ng-click="gotoMoreQuestion()" class="fin-app-btn fin-orange content-next">YES, I'D LIKE THAT</button>
-                    <button ng-if="!loggedIn" click-redirect="/registration" class="fin-app-btn fin-white content-next">NO THANKS, LET'S CONTINUE TO NEXT STEP</button>
-                    <button ng-if="loggedIn" click-redirect="/dashboard" class="fin-app-btn fin-white content-next">NO THANKS, LET'S CONTINUE TO NEXT STEP</button>
+                    <button ng-if="!$root.loggedIn" click-redirect="/registration" class="fin-app-btn fin-white content-next">NO THANKS, LET'S CONTINUE TO NEXT STEP</button>
+                    <button ng-if="$root.loggedIn" click-redirect="/dashboard" class="fin-app-btn fin-white content-next">NO THANKS, LET'S CONTINUE TO NEXT STEP</button>
                     <button ng-click="gotoFirst(0);(step = 1)" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>I'D LIKE TO TRY AGAIN</button>
                 </div>
             </div>
@@ -382,7 +382,8 @@
         <p>Risk Assessment</p>
     </div>    
     <div class="fin-btn-group gotoPages" ng-show="$root.lastSlide">
-        <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+        <button ng-show="step == 1" class="fin-link-btn content-prev" click-redirect="dashboard"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+        <button ng-show="step > 1" class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="step == 1" ng-disabled="riskAssesment1Form1.$invalid" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="step == 2" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="step == 3" ng-disabled="disableAppend" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
@@ -621,8 +622,8 @@
                 </div>
                 <div class="fin-btn-group answer-more addMargin">
                     <button click-redirect="/riskAssesment" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>I'D LIKE TO TRY AGAIN</button>
-                    <button ng-if="!loggedIn" click-redirect="/registration" class="fin-app-btn fin-orange content-next">SIGN UP</button>
-                    <button ng-if="loggedIn" click-redirect="/dashboard" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+                    <button ng-if="!$root.loggedIn" click-redirect="/registration" class="fin-app-btn fin-orange content-next">SIGN UP</button>
+                    <button ng-if="$root.loggedIn" click-redirect="/dashboard" class="fin-app-btn fin-orange content-next">CONTINUE</button>
                 </div>
             </div>
         </div>
@@ -746,7 +747,7 @@
                                         <risk-type></risk-type>
                                     </div>  
                                     <p class="bottom-text">As per your risk profile</p>
-                                    <button class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
+                                    <button ng-if="modelVal.assetAllocation.equityInitial != modelVal.assetAllocation.equity" class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
                                 </div>
                             </div>
                         </div>
@@ -974,7 +975,7 @@
                                         <risk-type></risk-type>
                                     </div>  
                                     <p class="bottom-text">As per your risk profile</p>
-                                    <button class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
+                                    <button ng-if="modelVal.assetAllocation.equityInitial != modelVal.assetAllocation.equity" class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
 
                                 </div>
                             </div>
@@ -1200,7 +1201,7 @@
                                     </div>  
 
                                     <p class="bottom-text">As per your risk profile</p>
-                                    <button class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
+                                    <button ng-if="modelVal.assetAllocation.equityInitial != modelVal.assetAllocation.equity" class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
 
                                 </div>
                             </div>
@@ -1464,7 +1465,7 @@
                                         <risk-type></risk-type>
                                     </div>  
                                     <p class="bottom-text">As per your risk profile</p>
-                                    <button class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
+                                    <button ng-if="modelVal.assetAllocation.equityInitial != modelVal.assetAllocation.equity" class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
                                 </div>
                             </div>
                         </div>
@@ -1688,7 +1689,7 @@
                                         <risk-type></risk-type>
                                     </div>  
                                     <p class="bottom-text">As per your risk profile</p>
-                                    <button class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
+                                    <button ng-if="modelVal.assetAllocation.equityInitial != modelVal.assetAllocation.equity" class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
                                 </div>
                             </div>
                         </div>
@@ -1913,7 +1914,7 @@
                                         <risk-type></risk-type>
                                     </div>  
                                     <p class="bottom-text">As per your risk profile</p>
-                                    <button class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
+                                    <button ng-if="modelVal.assetAllocation.equityInitial != modelVal.assetAllocation.equity" class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
                                 </div>
                             </div>
                         </div>
@@ -2137,7 +2138,7 @@
                                         <risk-type></risk-type>
                                     </div>  
                                     <p class="bottom-text">As per your risk profile</p>
-                                    <button class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
+                                    <button ng-if="modelVal.assetAllocation.equityInitial != modelVal.assetAllocation.equity" class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
                                 </div>
                             </div>
                         </div>
@@ -2299,7 +2300,7 @@
                                         <risk-type></risk-type> 
                                     </div> 
                                     <p class="bottom-text">As per your risk profile</p>
-                                    <button class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
+                                    <button ng-if="modelVal.assetAllocation.equityInitial != modelVal.assetAllocation.equity" class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
                                 </div>
                             </div>
                         </div>
@@ -2478,9 +2479,10 @@
                                     </div>
                                 </div>
                                 <div class="guage clearfix" one-time-equity={{modelVal.assetAllocation.equityInitial}} calculate-guage={{modelVal.assetAllocation.equity}}>
-                                    <h4 class="text">Recommended</h4>
                                     <div class="orbit">
                                         <div class="indicator"></div>
+                                        <h4 class="text">Recommended</h4>
+
                                     </div>  
                                     <div class="guage-image">
                                         <img src="assets/images/guage.png">
@@ -2520,7 +2522,7 @@
                                         <risk-type></risk-type>
                                     </div>  
                                     <p class="bottom-text">As per your risk profile</p>
-                                    <button class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
+                                    <button ng-if="modelVal.assetAllocation.equityInitial != modelVal.assetAllocation.equity" class="reset_allocation" ng-click="resetAllocation(modelVal.assetAllocation.equityInitial)"></button>
 
                                 </div>
                             </div>
@@ -2589,8 +2591,8 @@
         <div class="swiper-slide" ng-if="$root.selectedCriteria == 'op1'">
             <form name="quickInvestForm3" novalidate>
                 <div class="swiper-content">
-                      <h1 class="topHeader">You can invest upto Rs 1,50,000 to maximize your tax<span class="nextline">savings.</span><span class="nextline">I would like to invest</span></h1>
-                      <p class="question width-67"><span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" type="text" name="year" required ng-model="modelVal.A2"></span><span class="or">OR</span><button class="fin-app-btn fin-btn-white" ng-click="reloadRoute('op2', 1)">PLEASE HELP ME ESTIMATE</button></p>
+                      <h1 class="topHeader">You can invest upto <span class="currency">&#8377;</span> 1,50,000 to maximize your tax<span class="nextline">savings.</span><span class="nextline">I would like to invest</span></h1>
+                      <p class="question"><span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" type="text" name="year" required ng-model="modelVal.A2"></span><span class="or">OR</span><button class="fin-app-btn fin-btn-white" ng-click="reloadRoute('op2', 1)">PLEASE HELP ME ESTIMATE</button></p>
                       <span class="error-text" ng-show="modelVal.A2 != 0 && modelVal.A2 > 9999999">Maximum amount must be lesser than 99,99,999</span>
                       <span class="error-text" ng-show="modelVal.A2 != 0 && modelVal.A2 < 5000">Minimum amount must be greater than or equal to 5000</span>
 
@@ -3058,7 +3060,7 @@
                     </div>
                 </div>
                 <div class="fin-btn-group addMargin">
-                    <button click-redirect="/quickInvestStart" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>GO BACK & EDIT</button>
+                    <button click-redirect="/earnInterestStart" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>GO BACK & EDIT</button>
                     <!-- <button click-redirect="/goals" class="fin-app-btn fin-orange">CONTINUE PLANING</button> -->
                     <button ng-click="fundSelectionEarnInterest(modelVal)" class="fin-app-btn fin-orange">CONTINUE TO FUND SELECTION</button>
                 </div>
@@ -3165,11 +3167,11 @@
             <div class="col-xs-12">
                 <div class="col-xs-6">
                     <h2 ng-style="{'color':'#62bb46'}" class="text-center">Debt</h2>
-                    <fin-calendar-form ng-model="equity" ng-change="changeDebtModal()" format-symbol="percent" type="#ddffd3" font-color="#62bb46" min="0" max="100"></fin-calendar-form>
+                    <fin-calendar-form ng-model="equity" ng-change="changeDebtModal()" step5="true" format-symbol="percent" type="#ddffd3" font-color="#62bb46" min="0" max="100"></fin-calendar-form>
                 </div>
                 <div class="col-xs-6">
                     <h2 ng-style="{'color':'#047bc1'}" class="text-center">Equity</h2>
-                    <fin-calendar-form font-color="#047bc1" ng-model="equity2" ng-change="changeEquityModal()" format-symbol="percent" type="#e6f6ff" min="0" max="100"></fin-calendar-form>
+                    <fin-calendar-form font-color="#047bc1" ng-model="equity2" ng-change="changeEquityModal()" step5="true" format-symbol="percent" type="#e6f6ff" min="0" max="100"></fin-calendar-form>
                 </div>
             </div>
             <div class="col-xs-12 bottom-desc">
