--- a/app/modules/smartportfolio/views/schemeFactsheet.html
+++ b/app/modules/smartportfolio/views/schemeFactsheet.html
@@ -73,7 +73,7 @@
 				<li ng-click="setvalue = 'five_year';populateGraph($root.histPerformanceData, setvalue)" ng-class="{'active':setvalue =='five_year'}"><a href="javascript:void(0)">5 years</a></li>
 			</ul>
 			<hc-chart ng-if="resultSet" items="resultSet"></hc-chart>
-			<p class="text-right"><span class="addOnlyBold">Rs 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav">Rs.<span class="addOnlyBold">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
+			<p class="text-right"><span class="addOnlyBold"><span class="currency">&#8377;</span> 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav"><span class="currency">&#8377;</span><span class="addOnlyBold">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
 		</div>	
 		<div class="chart-cover" ng-show="setChartValue == 'OTHERS'" >
 			<div class="form-group col-xs-12 schemePortfolioTop text-center">
