--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -290,7 +290,7 @@
 				<div class="chart-cover" ng-show="setChartValue == 'PORFOLIO_TRACKER'" >
 					<h3 class="chart-main-header">Portfolio Performance Since Inception</h3>
 					<hc-chart ng-if="resultSet" items="resultSet"></hc-chart>
-					<p class="text-right"><span class="addOnlyBold highlight">Rs 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav">Rs.<span class="addOnlyBold highlight">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
+					<p class="text-right"><span class="addOnlyBold highlight"><span class="currency">&#8377;</span> 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav"><span class="currency">&#8377;</span><span class="addOnlyBold highlight">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
 				</div>
 			</div>
 		</div>
