Fix spelling of assessment

--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -11,7 +11,7 @@
 						<label><span></span></label>
 					</div>
 				</div>
-				<h2>Risk Assesment</h2>
+				<h2>Risk Assessment</h2>
 				<!-- <p class="text-center desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
 				<h3 class="text-center">Your current risk score is</h3>
 				<p class="text-center score">{{risk_score}}</p>
