--- a/app/modules/authentication/views/getstarted.html
+++ b/app/modules/authentication/views/getstarted.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="col-xs-12 getStartDesc">
 				<div class="row">
-					<h1>Risk Assesment</h1>
+					<h1>Risk Assessment</h1>
 					<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
 						<div class="row">
 							<p>Let's get started by asking you a few simple questions that will help us access your Risk Score.</p>
