--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -199,10 +199,10 @@
                 <form name="riskAssesment1Form4" novalidate>
                 <h2>If <span class="currency">&#8377</span> 1 lakh investment goes down to <span class="currency">&#8377</span> 80,000 <span class="nextline"> in 2 months, I will</span></h2>
                 <div class="radio-cover">
-                    <input type="radio" required id="option3Type1" name="option3" ng-model="modelVal.A19" value="op1"><label for="option3Type1"><span></span>Sell All your Mutual Fund Holdings</label>
-                    <input type="radio" required id="option3Type2" name="option3" ng-model="modelVal.A19" value="op2"><label for="option3Type2"><span></span>Sell part of your Mutual fund Holdings</label>
-                    <input type="radio" required id="option3Type3" name="option3" ng-model="modelVal.A19" value="op3"><label for="option3Type3"><span></span>Do Nothing</label>
-                    <input type="radio" required id="option3Type4" name="option3" ng-model="modelVal.A19" value="op4"><label for="option3Type4"><span></span>Add to your Mutual Fund Holdings</label>
+                    <input type="radio" required id="option3Type1" name="option3" ng-model="modelVal.A19" value="op1"><label for="option3Type1"><span></span>Sell all my holdings</label>
+                    <input type="radio" required id="option3Type2" name="option3" ng-model="modelVal.A19" value="op2"><label for="option3Type2"><span></span>Sell some of my holdings</label>
+                    <input type="radio" required id="option3Type3" name="option3" ng-model="modelVal.A19" value="op3"><label for="option3Type3"><span></span>Do Nothing, maintain holdings</label>
+                    <input type="radio" required id="option3Type4" name="option3" ng-model="modelVal.A19" value="op4"><label for="option3Type4"><span></span>Buy more, it's a good time</label>
                 </div>
                 </form>
             </div>
@@ -396,9 +396,9 @@
         <div class="swiper-slide">
             <div class="swiper-content">
                 <form name="riskAssesment2Form1" novalidate>
-                <h2>How long have you been investing money in the stock market?</h2>
+                <h2>I have been investing in the stock market for</h2>
                 <div class="radio-cover">
-                    <input type="radio" required id="option1Type1" name="option1" ng-model="modelVal.A10" value="op1"><label for="option1Type1"><span></span>I have never invested in the stock market before</label>
+                    <input type="radio" required id="option1Type1" name="option1" ng-model="modelVal.A10" value="op1"><label for="option1Type1"><span></span>Never invested before</label>
                     <input type="radio" required id="option1Type2" name="opoption1Tion1" ng-model="modelVal.A10" value="op2"><label for="option1Type2"><span></span>Less than 3 years</label>
                     <input type="radio" required id="option1Type3" name="option1" ng-model="modelVal.A10" value="op3"><label for="option1Type3"><span></span>Between 3 and 10 years</label>
                     <input type="radio" required id="option1Type4" name="option1" ng-model="modelVal.A10" value="op4"><label for="option1Type4"><span></span>More than 10 years</label>
@@ -409,12 +409,13 @@
         <div class="swiper-slide">
             <div class="swiper-content">
                 <form name="riskAssesment2Form2" novalidate>
-                <h2>What would you do with your mutual fund holdings when you read the newspaper headline “UK markets are in crisis”?</h2>
+                <h2>If I read the newspaper headline “UK markets are in crisis”, I would</h2>
                 <div class="radio-cover">
-                    <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A11" value="op1"><label for="option2Type1"><span></span>Buy more mutual funds</label>
-                    <input type="radio" required id="option2Type2" name="option2" ng-model="modelVal.A11" value="op2"><label for="option2Type2"><span></span>Shift from Equity to Debt funds</label>
                     <input type="radio" required id="option2Type3" name="option2" ng-model="modelVal.A11" value="op3"><label for="option2Type3"><span></span>Sell all mutual fund holdings</label>
+                    <input type="radio" required id="option2Type2" name="option2" ng-model="modelVal.A11" value="op2"><label for="option2Type2"><span></span>Shift from Equity to Debt funds</label>
                     <input type="radio" required id="option2Type4" name="option2" ng-model="modelVal.A11" value="op4"><label for="option2Type4"><span></span>Do Nothing</label>
+                    <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A11" value="op1"><label for="option2Type1"><span></span>Look to buy more mutual funds</label>
+                    <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A11" value="op5"><label for="option2Type1"><span></span>Not be sure what to do</label>
                 </div>
                 </form>
             </div>
@@ -422,13 +423,13 @@
         <div class="swiper-slide">
             <div class="swiper-content">
                 <form name="riskAssesment2Form3" novalidate>
-                <h2>Compared to your peers do you think you are more or less tolerant of investment risk?</h2>
+                <h2>Compared to my peers I think I am</h2>
                 <div class="radio-cover">
-                    <input type="radio" required id="option3Type1" name="option3" ng-model="modelVal.A12" value="op1"><label for="option3Type1"><span></span>I am a lot less willing to take risk.</label>
-                    <input type="radio" required id="option3Type2" name="option3" ng-model="modelVal.A12" value="op2"><label for="option3Type2"><span></span>I am less willing to take risk.</label>
-                    <input type="radio" required id="option3Type3" name="option3" ng-model="modelVal.A12" value="op3"><label for="option3Type3"><span></span>I am about the same.</label>
-                    <input type="radio" required id="option3Type4" name="option3" ng-model="modelVal.A12" value="op4"><label for="option3Type4"><span></span>I am more willing to take risk.</label>
-                    <input type="radio" required id="option3Type5" name="option3" ng-model="modelVal.A12" value="op5"><label for="option3Type5"><span></span>I am a lot more willing to take risk.</label>
+                    <input type="radio" required id="option3Type1" name="option3" ng-model="modelVal.A12" value="op1"><label for="option3Type1"><span></span>A lot less willing to take risk</label>
+                    <input type="radio" required id="option3Type2" name="option3" ng-model="modelVal.A12" value="op2"><label for="option3Type2"><span></span>Somewhat less willing to take risk</label>
+                    <input type="radio" required id="option3Type3" name="option3" ng-model="modelVal.A12" value="op3"><label for="option3Type3"><span></span>About the same</label>
+                    <input type="radio" required id="option3Type4" name="option3" ng-model="modelVal.A12" value="op4"><label for="option3Type4"><span></span>Somewhat more willing to take risk</label>
+                    <input type="radio" required id="option3Type5" name="option3" ng-model="modelVal.A12" value="op5"><label for="option3Type5"><span></span>A lot more willing to take risk</label>
                 </div>
                 </form>
             </div>
@@ -436,12 +437,13 @@
         <div class="swiper-slide">
             <div class="swiper-content">
                 <form name="riskAssesment2Form4" novalidate>
-                <h2>What would you do with your mutual fund holdings when you read the newspaper headline “RBI reduces repo rate by 25 bps”?</h2>
+                <h2>If I read the newspaper headline “RBI reduces repo rate by 25 bps”, I would</h2>
                 <div class="radio-cover">
-                    <input type="radio" required id="option4Type1" name="option4" ng-model="modelVal.A13" value="op1"><label for="option4Type1"><span></span>Buy more mutual funds</label>
-                    <input type="radio" required id="option4Type2" name="option3" ng-model="modelVal.A13" value="op2"><label for="option4Type2"><span></span>Shift from Equity to Debt funds</label>
                     <input type="radio" required id="option4Type3" name="option4" ng-model="modelVal.A13" value="op3"><label for="option4Type3"><span></span>Sell all mutual fund holdings</label>
+                    <input type="radio" required id="option4Type2" name="option3" ng-model="modelVal.A13" value="op2"><label for="option4Type2"><span></span>Shift from Equity to Debt funds</label>
                     <input type="radio" required id="option4Type4" name="option4" ng-model="modelVal.A13" value="op4"><label for="option4Type4"><span></span>Do Nothing</label>
+                    <input type="radio" required id="option4Type1" name="option4" ng-model="modelVal.A13" value="op1"><label for="option4Type1"><span></span>Look to buy more mutual funds</label>
+                    <input type="radio" required id="option4Type1" name="option4" ng-model="modelVal.A13" value="op5"><label for="option4Type1"><span></span>Not be sure what to do</label>
                 </div>
                 </form>
             </div>
@@ -449,13 +451,13 @@
         <div class="swiper-slide">
             <div class="swiper-content">
             <form name="riskAssesment2Form5" novalidate>
-                <h2>Imagine a choice between a stable job with limited opportunity for pay increases or a less secure job with the option of big payday in the future. Which job would you be more likely to take today?</h2>
+                <h2>If there was a choice between a stable job with low growth and a less secure job with high growth, I would</h2>
                 <div class="radio-cover">
-                    <input type="radio" required id="option5Type1" name="option5" ng-model="modelVal.A14" value="op1"><label for="option5Type1"><span></span>I’d definitely take the stable job with limited pay increases</label>
-                    <input type="radio" required id="option5Type2" name="option3" ng-model="modelVal.A14" value="op2"><label for="option5Type2"><span></span>I’d probably take the stable job with limited pay increases</label>
-                    <input type="radio" required id="option5Type3" name="option5" ng-model="modelVal.A14" value="op3"><label for="option5Type3"><span></span>I don’t know</label>
-                    <input type="radio" required id="option5Type4" name="option5" ng-model="modelVal.A14" value="op4"><label for="option5Type4"><span></span>I’d probably take the less secure job with big payday in the future</label>
-                    <input type="radio" required id="option5Type4" name="option5" ng-model="modelVal.A14" value="op5"><label for="option5Type4"><span></span>I’d definitely take the less secure job with big payday in the future</label>
+                    <input type="radio" required id="option5Type1" name="option5" ng-model="modelVal.A14" value="op1"><label for="option5Type1"><span></span>Definitely choose the stable job with low growth</label>
+                    <input type="radio" required id="option5Type2" name="option3" ng-model="modelVal.A14" value="op2"><label for="option5Type2"><span></span>Probably choose the stable job with low growth</label>
+                    <input type="radio" required id="option5Type3" name="option5" ng-model="modelVal.A14" value="op3"><label for="option5Type3"><span></span>Not be sure</label>
+                    <input type="radio" required id="option5Type4" name="option5" ng-model="modelVal.A14" value="op4"><label for="option5Type4"><span></span>Probably choose the less secure job with high growth</label>
+                    <input type="radio" required id="option5Type4" name="option5" ng-model="modelVal.A14" value="op5"><label for="option5Type4"><span></span>Definitely choose the less secure job with high growth</label>
                 </div>
                 </form>
             </div>
