--- a/less/common.less
+++ b/less/common.less
@@ -1123,6 +1123,9 @@ span.highlight{
 .mCSB_buttonUp{
 	display: none; 
 }
+.paddingTop1{
+	padding-top: 1%;
+}
 @keyframes makeDropdown{
 
   /*0%{
