--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -1,5 +1,14 @@
 section{
 	&.dashboard{
+		h1{
+		    font-family: 'PlayfairDisplay-Regular';
+		    color: #000;
+		    font-weight: normal;
+		    font-size: 2.25em;
+		    margin-top: 0;
+		    margin-bottom: 4%;
+		    opacity: 0.7;
+		}
 		padding-left:6%;
 		padding-right:6%;
 		padding-top: 3%;
@@ -17,21 +26,21 @@ section{
 			&:nth-child(2){
 				.image-div{
 					img{
-						width:85%;
+						width:115%;
 					}
 				}
 			}
 			&:nth-child(3){
 				.image-div{
 					img{
-						width:95%;
+						width:78%;
 					}
 				}
 			}
 			&:nth-child(4){
 				.image-div{
 					img{
-						width:81%;
+						width:125%;
 					}
 				}
 			}
@@ -107,6 +116,9 @@ section{
 					margin:0 auto;
 				}
 			}
+			.invest-goal{
+				margin: 46px 0 46px 35px;
+			}
 			.checkbox-cover{
 				label{
 					opacity:1;
@@ -155,6 +167,7 @@ section{
 					}
 				}
 			}
+			
 			@media @below768{
 				width:100%;
 				margin-right:0px;
