--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -1,15 +1,16 @@
 <section class="fadeIn dashboard">
+<h1 class="text-center">What would you like to do next?</h1>
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover" click-redirect="/riskAssesment">
 						<div class="image-div">
-							<img src="assets/images/riskassessmentMain.png">
+							<img class="img img-responsive" src="assets/images/riskassessmentMain.png">
 						</div>
-					<div class="checkbox-cover" ng-if="user_flags.risk_score">
+					<!-- <div class="checkbox-cover" ng-if="user_flags.risk_score">
 						<input type="radio" name>
 						<label><span></span></label>
-					</div>
+					</div> -->
 				</div>
 				<h2>Risk Assessment</h2>
 				<!-- <p class="text-center desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
@@ -20,46 +21,30 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover" click-redirect="/planInvest">
-					<div class="image-div">
-						<img src="assets/images/dashboardImage2.png">
+					<div class="image-div invest-goal">
+						<img class="" src="assets/images/invest.png">
 					</div>
-					<div class="checkbox-cover" ng-if="portfolio_flag">
+					<!-- <div class="checkbox-cover" ng-if="portfolio_flag">
 						<input type="radio" name>
 						<label><span></span></label>
-					</div>
+					</div> -->
 				</div>
-				<h2>Plan Investments</h2>
+				<h2>Plan/Invest</h2>
 				<!-- <p class="text-center desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
-				<h3 class="text-center" ng-if="!portfolio_flag">You currently have no planned</h3>
+				<!-- <h3 class="text-center" ng-if="!portfolio_flag">You currently have no planned</h3>
 				<h3 class="text-center" ng-if="portfolio_flag">You currently have planned</h3>
 				<p class="text-center score" ng-bind="dashCounts['investCount']"></p>
-				<h4 class="text-center">Annual investments in varied goals</h4>
-			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/investWithdrawStart">
-					<div class="image-div">
-						<img src="assets/images/dashboardImage3.png">
-					</div>
-					<div class="checkbox-cover" ng-if="user_flags.invest_redeem">
-						<input type="radio" name>
-						<label><span></span></label>
-					</div>
-				</div>
-				<h2>Invest/Withdraw</h2>
-				<!-- <p class="text-center desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
-				<!-- <h3 class="text-center">Your current risk score is</h3> -->
-<!-- 				<p class="text-center score">5.7</p>
- -->			<h4 class="text-center" ng-if="portfolio_flag">You havent started building<span class="nextline">your smart profile yet</span></h4>
+				<h4 class="text-center">Annual investments in varied goals</h4> -->
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" >
 				<div class="goals-cover" ng-click="showTrackPerformance()" ng-if="!disabledTrackPerformance">
 					<div class="image-div">
-						<img src="assets/images/dashboardImage4.png">
+						<img class="img img-responsive" src="assets/images/dashboardImage4.png">
 					</div>
-					<div class="checkbox-cover" ng-if="!user_flags.is_virtual">
+					<!-- <div class="checkbox-cover" ng-if="!user_flags.is_virtual">
 						<input type="radio" name>
 						<label><span></span></label>
-					</div>
+					</div> -->
 				</div>
 
 				<div class="goals-cover goals-cover-disabled" ng-if="disabledTrackPerformance">
@@ -72,9 +57,26 @@
 				<!-- <h3 class="text-center">Your financial goals are</h3>
 				<p class="text-center score text-score" ng-if="dashCounts['trackPerform']">on track</p>
 				<p class="text-center score text-score" ng-if="!dashCounts['trackPerform']">off track</p> -->
-				<h4 class="text-center" ng-if="user_flags.is_virtual">You don't have a smart portfolio yet</h4>
-				<h4 class="text-center" ng-if="!user_flags.is_virtual">You have a smart portfolio</h4>
+				<!-- <h4 class="text-center" ng-if="user_flags.is_virtual">You don't have a smart portfolio yet</h4>
+				<h4 class="text-center" ng-if="!user_flags.is_virtual">You have a smart portfolio</h4> -->
 			</div>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
+				<div class="goals-cover" ng-click="goToWithdraw()">
+					<div class="image-div">
+						<img class="" src="assets/images/Withdraw.png">
+					</div>
+					<!-- <div class="checkbox-cover" ng-if="user_flags.invest_redeem">
+						<input type="radio" name>
+						<label><span></span></label>
+					</div> -->
+				</div>
+				<h2>Withdraw</h2>
+				<!-- <p class="text-center desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+				<!-- <h3 class="text-center">Your current risk score is</h3> -->
+<!-- 				<p class="text-center score">5.7</p>
+			<h4 class="text-center" ng-if="portfolio_flag">You havent started building<span class="nextline">your smart profile yet</span></h4> -->
+			</div>
+			
 		</div>
 	</div>
 </section>
