--- a/app/modules/investwithdraw/views/investWidrawStart.html
+++ b/app/modules/investwithdraw/views/investWidrawStart.html
@@ -1,14 +1,14 @@
 <section class="fadeIn dashboard goals invest">
 	<div class="col-xs-12 goal-section">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
+<!-- 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover" ng-click="goToInvest()">
 						<div class="image-div">
 							<img src="assets/images/invest.png">
 						</div>
 				</div>
 				<h2>Invest</h2>
-			</div>
+			</div> -->
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover" ng-click="goToWithdraw()">
 					<div class="image-div widthDrawImage">
